--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -416,3 +416,25 @@ header h2.tempo a{
 	font-size: 40px;
 }
 
+
+/*---------------------------
+	Empty Page
+----------------------------*/
+
+.empty{
+	opacity: 0;
+	transition: 0.6s;
+	pointer-events: none;
+	position: absolute;
+	left: 0;
+	top: 100px;
+	width: 100%;
+}
+
+.empty.visible{
+	opacity: 1;
+}
+
+.empty h3{
+	font-size: 40px;
+}
