--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -430,6 +430,20 @@ header h2.tempo a{
 	opacity: 1;
 	pointer-events: auto;
 }
+.shopping-cart button{
+	border-radius: 2px;
+	background-color:  #87bae1;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12);
+	border: 0;
+	color: #ffffff;
+	font-weight: bold;
+	font-size: 13px;
+	cursor: pointer;
+	width: 95px;
+	height: 32px;
+	float: right;
+    margin: 20px;
+}
 .shopping-cart-list > li{
 	box-shadow : 0 0 20px 8px #f3f3f3 inset;
 	padding: 20px 40px;
